[project]
name = "picguessr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "openai>=1.16.1",
    "httpx[socks]>=0.27.0",
    "pytelegrambotapi>=4.16.1",
    "telegramify-markdown>=0.5.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
'_'.env_file = ".env"
start = "python picguessr.py"
